# Clarke

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Readme.md  vcpkg.json
.github/workflows/: cmake.yml
Clarke.Engine.Core/: AdvanceStateContext.hpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  GameObjectId.hpp  WorldPosition.cpp  WorldPosition.hpp
Clarke.Engine.Core.Tests/: CMakeLists.txt  SerializationTests.cpp
Clarke.Engine.Entropy/: CMakeLists.txt  EntropySource.cpp  EntropySource.hpp
Clarke.Messages/: CMakeLists.txt  Clarke.Messages.cpp  Clarke.Messages.h  Message.hpp  MessageOperator.hpp  TypeNameTrait.hpp  TypeProperties.hpp
Clarke.Messages.Tests/: CMakeLists.txt  Clarke.Messages.Tests.cpp
Docs/: GameObjects.md
